Version 2.02.104
===================================
  Add configure --enable-udev-systemd-background-jobs.
  Add lvm2-pvscan@.service to run pvscan as a service for lvmetad/autoactivation.
  Fix lvconvert swap of poolmetadata volume for active thin pool.
  Check for open count with a timeout before removal/deactivation of an LV.
  Report RAID images split with tracking as out-of-sync ("I").
  Improve parsing of snapshot lv segment.
  Add workaround for deactivation problem of opened virtual snapshot.
  Disable unsupported merge for virtual snapshot.
  Move code to remove virtual snapshot from tools to lib for lvm2app.
  Fix possible race during daemon worker thread creation (lvmetad).
  Fix possible deadlock while clearing lvmetad cache for full rescan.
  Fix possible race while creating/destroying memory pools.
  Recognise NVM Express devices in filter.
  Fix failing metadata repair when lvmetad is used.
  Fix incorrect memory handling when reading messages from lvmetad.
  Fix locking in lvmetad when handling the PV which is gone.
  Recognize new flag to skip udev scanning in udev rules and act appropriately.
  Add support for flagging an LV to skip udev scanning during activation.
  Improve message when unable to change discards setting on active thin pool.
  Run full scan before vgrename operation to avoid any cache name collision.
  Fix lvconvert when converting to a thin pool and thin LV at once.

Version 2.02.103 - 4th October 2013
===================================
  Ensure vgid matches before removing vgname entry from lvmetad cache.
  Add --ignoreskippedcluster for exit status success when clustered VGs skipped.
  Fix 3 minute udev timeout so that it is applied for all LVM volumes.
  Fix thin/raid & activation config defaults with configure --disable-devmapper.
  Fix RAID calculation for sufficient allocatable space.
  lvconvert from linear to mirror or RAID1 now honors mirror_segtype_default.
  Add thin-performance configuration profile.