@@ -204,8 +204,8 @@ for ARG
 do
     if [ -b "$ARG" ]
     then
-        PVS_OUT=`"${LVM}" pvs ${LVM_OPTS} --noheadings -o vg_name "$ARG" 2>/dev/null`
-        checkvalue $? "$ARG is not a PV."
+        PVS_OUT=`"${LVM}" pvs ${LVM_OPTS} --noheadings -o vg_name "$ARG"`
+        checkvalue $? "$ARG could not be verified to be a PV without errors."
         PV_VGNAME=$(echo $PVS_OUT | $GREP -v '[[:space:]]+$')
         [ -z "$PV_VGNAME" ] && die 3 "$ARG is not in a VG."
 
@@ -227,7 +227,7 @@ fi
 ### Get the existing state so we can use it later
 #####################################################################
 
-OLDVGS=`"${LVM}" vgs ${LVM_OPTS} -o name --noheadings 2>/dev/null`
+OLDVGS=`"${LVM}" vgs ${LVM_OPTS} -o name --noheadings`
 checkvalue $? "Current VG names could not be collected without errors"
 
 #####################################################################
@@ -280,7 +280,7 @@ export LVM_SYSTEM_DIR=${TMP_LVM_SYSTEM_DIR}
 ### Rename the VG(s) and change the VG and PV UUIDs.
 #####################################################################
 
-PVINFO=`"${LVM}" pvs ${LVM_OPTS} -o pv_name,vg_name,vg_attr --noheadings --separator : 2>/dev/null`
+PVINFO=`"${LVM}" pvs ${LVM_OPTS} -o pv_name,vg_name,vg_attr --noheadings --separator :`
 checkvalue $? "PV info could not be collected without errors"
 
 # output VG info so each line looks like: name:exported?:disk1,disk2,...
