@@ -1,5 +1,6 @@
 Version 2.02.104
 ===================================
+  Remove 2>/dev/null from three lvm commands executed by vgimportclone.
   Add configure --enable-udev-systemd-background-jobs.
   Add lvm2-pvscan@.service to run pvscan as a service for lvmetad/autoactivation.
   Fix lvconvert swap of poolmetadata volume for active thin pool.
